feat(add schema ProdukStok): add schema ProdukStok to ProdukStokController
